tests/snapshots/examples_fixtures/type_system__failing__31_direct_time_builtin_missing_effect.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/31_direct_time_builtin_missing_effect.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Effect

requires effect `Clock` but the enclosing context does not provide it

  examples/type_system/failing/31_direct_time_builtin_missing_effect.flx:4:5
  |
4 |     now_ms()
  |     ^^^^^^^^
  |     -------- requires `Clock`

Hint:
  annotate the enclosing function with `with Clock`
== stdout ==
<not executed>
